@@ -61,6 +61,9 @@ ezmlm-idx-7.1.0, ????-??-??
 - Fixed bug in command-line option processing which caused sender-
   confirmed posting to fail.
 
+- Fixed handling BATV sender addresses with upper-case hex tags.
+  Thanks to Kyle Wheeler for pointing this out.
+
 ezmlm-idx-7.0.2, 2009-08-09
 ===========================
 
